tests/ui/type-alias-enum-variants/resolve-to-enum-variant-in-type-namespace-and-error.stderr
error: expected type, found variant `V`
  --> $DIR/resolve-to-enum-variant-in-type-namespace-and-error.rs:8:15
   |
LL | fn check() -> <E>::V {}
   |               ^^^^^^

error: aborting due to previous error

